fix problem with unsigned commits
